@@ -3,6 +3,8 @@
 
 Version 8.0.29
 
+  - Fix for Bug#33723611, getDefaultTransactionIsolation must return repeatable read.
+
   - Fix for Bug#38954 (11749415), DATA TRUNCATION WHILE USING BIT(1) IN STORED PROCEDURE WITH INOUT TYPE.
 
   - Fix for Bug#85317 (25672958), EXECUTE BATCH WILL THROW NULL POINTER EXCEPTION WHERE THE COLUMN IS BLOB!
